--- a/WebContent/css/DataCus.css
+++ b/WebContent/css/DataCus.css
@@ -5,57 +5,57 @@
 		background: #ddd;
 	}
 	#container {
-	margin: 1em auto;
-	background: #fff;
-	height: 615px;
-	width: 1300px;
-	margin-right: 5px;
-	margin-left: 5px;
-}
+		margin: 1em auto;
+		background: #fff;
+		height: 615px;
+		width: 1300px;
+		margin-right: 5px;
+		margin-left: 5px;
+	}
 	#header {
-	background-color:#99bbbb;
-	height: 36px;
-	width: 100%;
-	margin-bottom: 8px;
-	margin-left: 5px;
-	margin-top: 2px;
-	margin-right: 10px;
-}
+		background-color:#99bbbb;
+		height: 36px;
+		width: 100%;
+		margin-bottom: 8px;
+		margin-left: 5px;
+		margin-top: 2px;
+		margin-right: 10px;
+	}
 	#toolbox {
-	background-color:#CACECD;
-	width:12%;
-	height:550px;
-	border: thin solid #666666;
-	color: #333333;
-	float: left;
-	margin-left: 10px;
-}
+		background-color:#CACECD;
+		width:12%;
+		height:550px;
+		border: thin solid #666666;
+		color: #333333;
+		float: left;
+		margin-left: 10px;
+	}
 	#content {
-	background-color:#EEEEEE;
-	width:73%;
-	height: 550px;
-	border: thin solid #696969;
-	float:left;
-	margin-left: 5px;
-}
+		background-color:#EEEEEE;
+		width:73%;
+		height: 550px;
+		border: thin solid #696969;
+		float:left;
+		margin-left: 5px;
+	}
 	#BasicSpec {
-	background-color:#FFFFFF;
-	width:12%;
-	height: 550px;
-	border: thin solid #CCCCCC;
-	float:left;
-	margin-left: 5px;
-}
+		background-color:#FFFFFF;
+		width:12%;
+		height: 550px;
+		border: thin solid #CCCCCC;
+		float:left;
+		margin-left: 5px;
+	}
 	#footer
-{
-	clear: both;
-	color: #000;
-	text-align: center;
-	padding: 5px;
-	font-size: 90%;
-	border-top: 1px solid #999;
-	margin-top: 8px;
-}
+	{
+		clear: both;
+		color: #000;
+		text-align: center;
+		padding: 5px;
+		font-size: 90%;
+		border-top: 1px solid #999;
+		margin-top: 8px;
+	}
 	
 	#properties{
 		width:180px;
@@ -68,4 +68,41 @@
 		z-index:88;
 		display:none; 
 		overflow: hidden;
+	}
+	#ObjProperties{
+		width:180px;
+		height:500px;
+		position:absolute;
+		right:61px;
+		top:80px;
+		border:3px solid #789;
+		background:#fff;
+		z-index:88;
+		display:none; 
+		overflow: hidden;
+	}
+	#DtProperties{
+		width:180px;
+		height:500px;
+		position:absolute;
+		right:61px;
+		top:80px;
+		border:3px solid #789;
+		background:#fff;
+		z-index:88;
+		display:none; 
+		overflow: hidden;
+	}
+	.button-style {
+		background: linear-gradient(#FAFAFA, #EAEAEA) repeat scroll 0 0 #CECECE;
+		background: -moz-linear-gradient(#FAFAFA, #EAEAEA) repeat scroll 0 0 #CECECE;
+		border: 1px solid #DDDDDD;
+		border-radius: 3px 3px 3px 3px;
+		color: #555555;
+		cursor: pointer;
+		font-family: "Helvetica Neue", Helvetica, Arial, Tahoma, sans-serif;
+		font-size: 13px;
+		font-weight: 700;
+		margin: 1px;
+		padding: 5px 8px;
 	}
